day5 미완성 과제제출_정아영

--- a/homework/day04_일기.html
+++ b/homework/day04_일기.html
@@ -42,16 +42,18 @@
 
                     <div id="아이콘박스id" class="아이콘박스">
                         <div id="iconBoxFId" class="iconBoxF">
-                            <div id="iconBoxFImgID" class="iconBoxFImg">
-                                <img src="./img/day04img/슬퍼요 (m).png" alt="">
-                                <div class="iconBoxF두번째">
-                                    <div class="iconBoxF세번째">
-                                        <div>슬퍼요</div>
-                                        <div>2024.03.12</div>
+                            <a href="./day05_일기상세페이지.html">
+                                <div id="iconBoxFImgID" class="iconBoxFImg">
+                                    <img src="./img/day04img/슬퍼요 (m).png" alt="">
+                                    <div class="iconBoxF두번째">
+                                        <div class="iconBoxF세번째">
+                                            <div>슬퍼요</div>
+                                            <div>2024.03.12</div>
+                                        </div>
+                                        <div class="iconBoxF네번째">타이틀 영역 입니다.</div>
                                     </div>
-                                    <div class="iconBoxF네번째">타이틀 영역 입니다.</div>
                                 </div>
-                            </div>
+                            </a>
                             <div class="iconBoxFImg">
                                 <img src="./img/day04img/놀랐어요 (m).png" alt="">
                                 <div class="iconBoxF두번째">
