[240902].day6__section03 이하성 과제제출

--- a/myDiary.html
+++ b/myDiary.html
@@ -31,8 +31,8 @@
             </div>
         </div>
 
-        <div class="container__content">
-            <div class="content__left__card">
+        <div class="container__body">
+            <div class="body__left__card">
                 <div class="wrapper__card">
                     <div class="card__delete"></div>
                     <div class="card__img">
@@ -40,15 +40,15 @@
                     </div>
                     <div class="card__topic">
                         <div class="card__status">
-                            <div class="card__happy">행복해요</div>
+                            <div class="card__mood">행복해요</div>
                             <div class="card__date">2024. 03. 12</div>
                         </div>
                         <div class="card__title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
                     </div>
                 </div>
             </div>
-            <div class="content__right__diary">
-                <div class="diary__title">📍 일기 쓰기</div>
+            <div class="body__right__diary">
+                <div class="diary__subject">📍 일기 쓰기</div>
                 <div class="diary__question">오늘 기분은 어땠나요?</div>
 
                 <ul class="diary__radio">
@@ -59,11 +59,11 @@
                     <input type="radio" name="mood" value="etc" id="radioEtc"/> <label for="radioEtc"> 기타 </label>
                 </ul>
 
-                <div class="diary__subject">제목</div>
-                <input class="diary__subInput" id="diaryTitle" type="text" placeholder="제목을 입력해 주세요." />
+                <div class="diary__title">제목</div>
+                <input class="diary__titleInput" id="diaryTitle" type="text" placeholder="제목을 입력해 주세요." />
 
-                <div class="diary__context">내용</div>
-                <input class="diary__conInput" id="diaryContext" type="text" placeholder="내용을 입력해 주세요." />
+                <div class="diary__content">내용</div>
+                <input class="diary__contentInput" id="diaryContent" type="text" placeholder="내용을 입력해 주세요." />
 
                 <div class="diary__button" id="diaryButton">등록하기</div>
             </div>
