--- a/depth01/myDiary_detail.html
+++ b/depth01/myDiary_detail.html
@@ -13,29 +13,29 @@
             <div class="header__text"> <b class="header__text" id="header__login"> {name} </b>의 다이어리 </div>
         </div>
 
-        <div class="container__content">
-            <div class="content__title"> 이것은 타이틀 입니다. </div>
-            <div class="content__status">
-                <div class="content__mood">
+        <div class="container__body">
+            <div class="body__title"> 이것은 타이틀 입니다. </div>
+            <div class="body__status">
+                <div class="status__mood">
                     <div class="mood__img">
                         <img src="../asset/sticker__happy.png" />
                     </div>
                     <div class="mood__text">행복해요</div>
                 </div>
-                <div class="content__post">
+                <div class="status__post">
                     <div class="post__date">0000. 00. 00</div>
                     <div class="post__text">작성</div>
                 </div>
             </div>
-            <div class="content__context">
-                <div class="context__head">
-                    <div class="context__title">내용</div>
-                    <div class="context__btn">
-                        <div class="context__edit">수정</div>
-                        <div class="context__delete">삭제</div>
+            <div class="body__content">
+                <div class="content__title">
+                    <div class="title__text">내용</div>
+                    <div class="title__btn">
+                        <div class="btn__edit">수정</div>
+                        <div class="btn__delete">삭제</div>
                     </div>
                 </div>
-                <div class="context__text">
+                <div class="content__text">
                     내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다
                     내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다
                     내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다
@@ -51,13 +51,13 @@
 
         <div class="container__comment">
             <div class="comment__title">회고</div>
-            <div class="comment__field">
-                <input class="comment__input" type="text" placeholder="회고를 남겨보세요."/>
-                <div class="comment__btn">입력</div>
+            <div class="comment__input">
+                <input class="input__text" type="text" placeholder="회고를 남겨보세요."/>
+                <div class="input__btn">입력</div>
             </div>
             <div class="comment__list">
-                <div class="comment__text">3년이 지나고 다시 보니 이 때가 그립더라.</div>
-                <div class="comment__date">2024. 09. 24 작성</div>
+                <div class="list__text">3년이 지나고 다시 보니 이 때가 그립더라.</div>
+                <div class="list__date">2024. 09. 24 작성</div>
             </div>
         </div>
     </div>
