--- a/section03/detail.html
+++ b/section03/detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/detail.css" />
+    <script src="./javascript/common.js"></script>
     <script src="./javascript/detail.js"></script>
     <title>일기보관함</title>
   </head>
