made responsive css

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </template>
     </header>
     <main>
-        <div class="tab-view bar">
+        <div class="tab-view bar container-picker-tab">
             <button class="tab-view btn active">일기보관함</button>
             <button class="tab-view btn" disabled>사진보관함</button>
         </div>
-        <div class="bar tab-view">
+        <div class="bar tab-view selection-tabview">
             <select id="dropdownEmotionFilter">
                 <option>전체</option>
                 <option>행복해요</option>
