✨ feat: 수정 버튼 클릭 시 transform 추가

--- a/section03/edit.html
+++ b/section03/edit.html
@@ -17,63 +17,52 @@
           </h1>
         </header>
         <section class="container">
-          <div class="detail">
-            <div class="detail-title">
-              <h2>타이틀</h2>
-            </div>
-            <div class="detail-info flexbox">
-              <div class="detail-emotion flexbox">
-                <div class="emotion-thumbnail">
-                  <img src="" />
-                </div>
-                <div class="emotion-name">
-                  <span>행복해요</span>
-                </div>
-              </div>
-              <div class="detail-date">
-                <span>2024. 07. 12 작성</span>
-              </div>
-            </div>
-            <div class="detail-content">
-              <h3>내용</h3>
-              <p>일기내용</p>
-            </div>
-            <div class="actions flexbox">
-              <a class="button-edit" href="./diary-edit.html">수정</a>
-              <button class="button-delete">삭제</button>
-            </div>
-          </div>
-          <div class="review">
-            <form>
-              <legend>회고</legend>
+          <div class="edit">
+            <form class="register">
               <fieldset>
-                <div class="review-area">
-                  <input type="text" class="input-review" />
-                  <button class="button-add-review">입력</button>
+                <div class="form-area">
+                  <h3 class="form-title">오늘 기분은 어땠나요?</h3>
+                  <div class="emotions flexbox">
+                    <div class="emotion flexbox align-center">
+                      <input type="radio" id="happy" name="emotion" />
+                      <label for="happy" class="emotion-label emotion-happy">행복해요</label>
+                    </div>
+                    <div class="emotion flexbox align-center">
+                      <input type="radio" id="sad" name="emotion" />
+                      <label for="sad" class="emotion-label emotion-sad">슬퍼요</label>
+                    </div>
+                    <div class="emotion flexbox align-center">
+                      <input type="radio" id="surprising" name="emotion" />
+                      <label for="surprising" class="emotion-label emotion-surprising">놀랐어요</label>
+                    </div>
+                    <div class="emotion flexbox align-center">
+                      <input type="radio" id="angry" name="emotion" />
+                      <label for="angry" class="emotion-label emotion-angry">화나요</label>
+                    </div>
+                    <div class="emotion flexbox align-center">
+                      <input type="radio" id="etc" name="emotion" />
+                      <label for="etc" class="emotion-label emotion-etc">기타</label>
+                    </div>
+                  </div>
+                  <div class="input-title-area">
+                    <label for="input-title">제목</label>
+                    <input type="text" id="input-title" placeholder="일기 제목" />
+                  </div>
+                  <div class="input-content-area">
+                    <label for="input-content">내용</label>
+                    <textarea id="input-content" placeholder="일기 내용"></textarea>
+                  </div>
+                </div>
+
+                <div class="actions flexbox justify-center">
+                  <button class="button-cancel">취소</button>
+                  <button class="button-edit" onclick="clickHandler()">수정하기</button>
                 </div>
               </fieldset>
             </form>
-            <ul class="review-list">
-              <li class="review-item flexbox">
-                <p class="review-item-content">리뷰내용</p>
-                <span class="review-date">[2024. 09. 24]</span>
-              </li>
-              <li class="review-item flexbox">
-                <p class="review-item-content">리뷰내용</p>
-                <span class="review-date">[2024. 09. 24]</span>
-              </li>
-            </ul>
           </div>
         </section>
       </div>
-
-      <footer class="footer">
-        <div class="footer-inside flexbox col">
-          <h2 class="footer-title">다인의 다이어리</h2>
-          <p class="footer-info">대표 : 민다인</p>
-          <p class="footer-copy">Copyright &copy; 2024. Dain Co., Ltd.</p>
-        </div>
-      </footer>
     </div>
   </body>
 </html>
