[240903] [수정] CSS: 전체 - 메인 페이지 모바일 환경 오류 수정

--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                         <button class="diary_write_button" id="writeButton" disabled onclick="writeButtonPressed()">등록하기</button>
-                        <button class="top_scroll_floating_button" id="top_scroll_button" onclick="topScrollFloatingButtonTapped()"><img src="./assets/top_scroll.png"></button>
+                        <!-- <button class="top_scroll_floating_button" id="top_scroll_button" onclick="topScrollFloatingButtonTapped()"><img src="./assets/top_scroll.png"></button> -->
                     </div>
             </div>
         </div>
