--- a/다이어리/diary-edit.html
+++ b/다이어리/diary-edit.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>diary-detail</title>
     <link rel="stylesheet" href="./diary-edit.css" />
   </head>
