--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>diary</title>
     <link rel="stylesheet" href="./diary.css" />
   </head>
   <body>
     <div class="layout">
       <div class="header_layout">
-        <div>
+        <div class="layoutWrapper">
           <div class="header">
             <div class="logo">예슬이의 다이어리</div>
           </div>
           <div class="header_img_layout">
-            <img
-              src="./image/header_img.png"
-              width="1169px"
-              height="240px"
-              class="header_img"
-            />
+            <div class="header_img"></div>
           </div>
           <div class="navigation">
             <div class="navigation_menu">
