--- a/section03/index.html
+++ b/section03/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <div class="app">
-      <div class="app-insede">
-        <header class="header">
-          <h1 class="header-title">
-            <a href="">다인의 다이어리</a>
-          </h1>
-        </header>
+      <header class="header">
+        <h1 class="header-title">
+          <a href="">다인의 다이어리</a>
+        </h1>
+      </header>
+      <div class="app-inside">
         <section class="container">
           <div class="container-cover flexbox">
             <img src="./assets/images/image_cover.jpeg" alt="" />
@@ -87,11 +87,11 @@
                 </form>
               </aside>
             </div>
-            <div class="scroll-up">
-              <button class="button-scroll-up" onclick="scrollToTop()"><img src="./assets/images/icon_scroll_up.svg" alt="맨 위로 이동하기" /></button>
-            </div>
           </div>
         </section>
+      </div>
+      <div class="scroll-up">
+        <button class="button-scroll-up" onclick="scrollToTop()"><img src="./assets/images/icon_scroll_up.svg" alt="맨 위로 이동하기" /></button>
       </div>
 
       <footer class="footer">
