[240903] [수정] CSS: 전체 - 메인 페이지 모바일 환경에서 필터 위치 구현 방식 수정

--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="filter_item_mobile" class="filter_item">
+                <!-- <div id="filter_item_mobile" class="filter_item">
                     <div class="">
                         <select id="mood_select_mobile", class="mood_select_box" onchange="filterDiary()">
                             <option value="전체" selected>전체</option>
@@ -108,7 +108,7 @@
                             <option value="기타">기타</option>
                         </select>
                     </div>
-                </div>
+                </div> -->
                 <div class="contents_right_item">
                         <div class="write_title">📍 일기 쓰기</div>
                         <div class="write_diary">
@@ -149,12 +149,12 @@
                             </div>
                         </div>
                         <button class="diary_write_button" id="writeButton" disabled onclick="writeButtonPressed()">등록하기</button>
-                        <!-- <button class="top_scroll_floating_button" id="top_scroll_button" onclick="topScrollFloatingButtonTapped()"><img src="./assets/top_scroll.png"></button> -->
+                        <button class="top_scroll_floating_button" id="top_scroll_button" onclick="topScrollFloatingButtonTapped()"><img src="./assets/top_scroll.png"></button>
                     </div>
             </div>
         </div>
     </div>
-    <div class="footer">
+    <div id="HTML_footer" class="footer">
         <div class="footer_information">
             <div class="page_title">민지의 다이어리</div>
             <!-- <div class="exponent_title">대표: {이름}</div> -->
