💄 style: 공통 부분 common.css로 분리 및 disabled 스타일 추가

--- a/section03/detail.html
+++ b/section03/detail.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <div class="app">
-      <div class="app-insede">
-        <header class="header">
-          <h1 class="header-title">
-            <a href="">다인의 다이어리</a>
-          </h1>
-        </header>
+      <header class="header">
+        <h1 class="header-title">
+          <a href="">다인의 다이어리</a>
+        </h1>
+      </header>
+      <div class="app-inside">
         <section class="container">
           <div class="detail">
             <div class="detail-title">
@@ -43,7 +43,7 @@
               <button class="button-delete">삭제</button>
             </div>
           </div>
-          <div class="review">
+          <div class="review" id="review">
             <form>
               <legend>회고</legend>
               <fieldset>
