[240903] CSS: 전체 - 상세 및 수정 페이지 반응형 페이지 구현

--- a/01-diary/detail/detail.html
+++ b/01-diary/detail/detail.html
@@ -2,8 +2,10 @@
 <html lang="ko">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상세 페이지</title>
     <link rel="stylesheet" href="./detail.css">
+    <link rel="stylesheet" href="./detail_1208.css">
     <script src="./detail.js"></script>
 </head>
 
@@ -11,7 +13,7 @@
     <div class="root_container">
         <header class="header_container">
             <a class="home_link" href="../index.html">
-                <div class="header_title">민지의 다이어리</div>
+                <div class="header_title">일기 상세</div>
             </a>
         </header>
         <section class="detail_section_container">
