--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -21,9 +21,9 @@
             </div>
         </div>
         <div class="contents_container">
-            <div id="filter_item_desktop" class="filter_item">
+            <div id="filter_item" class="filter_item">
                 <div class="">
-                    <select id="mood_select_desktop", class="mood_select_box" onchange="filterDiary()">
+                    <select id="mood_select", class="mood_select_box" onchange="filterDiary()">
                         <option value="전체" selected>전체</option>
                         <option value="행복해요">행복해요</option>
                         <option value="슬퍼요">슬퍼요</option>
@@ -97,18 +97,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div id="filter_item_mobile" class="filter_item">
-                    <div class="">
-                        <select id="mood_select_mobile", class="mood_select_box" onchange="filterDiary()">
-                            <option value="전체" selected>전체</option>
-                            <option value="행복해요">행복해요</option>
-                            <option value="슬퍼요">슬퍼요</option>
-                            <option value="놀랐어요">놀랐어요</option>
-                            <option value="화나요">화나요</option>
-                            <option value="기타">기타</option>
-                        </select>
-                    </div>
-                </div> -->
                 <div class="contents_right_item">
                         <div class="write_title">📍 일기 쓰기</div>
                         <div class="write_diary">
