--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/media.css" />
     <link
       rel="stylesheet"
       as="style"
@@ -32,6 +33,7 @@
     <div class="headerBanner">
       <!-- <img src="./img/mainBanner.jpeg" alt="메인이미지입니다." /> -->
     </div>
+
     <nav>
       <!-- <ul class="navMenu">
         <li class="active">일기보관함</li>
@@ -39,84 +41,91 @@
       </ul> -->
     </nav>
 
-    <div class="navBottom">
-      <div class="filterSearchBox">
-        <div class="selectBox">
-          <button class="filterPopBtn" onclick="optionShow(event)">전체</button>
-          <!-- onchange="moodFilter()" -->
-          <ul class="diaryFilter filterList" name="moodFilter">
-            <li
-              class="active"
-              onclick="optionSelect(event,'moodFilter')"
-              data-value="전체"
-            >
-              전체
-            </li>
-            <li
-              onclick="optionSelect(event,'moodFilter')"
-              data-value="행복해요"
-            >
-              행복해요
-            </li>
-            <li onclick="optionSelect(event,'moodFilter')" data-value="슬퍼요">
-              슬퍼요
-            </li>
-            <li
-              onclick="optionSelect(event,'moodFilter')"
-              data-value="놀랐어요"
-            >
-              놀랐어요
-            </li>
-            <li onclick="optionSelect(event,'moodFilter')" data-value="화나요">
-              화나요
-            </li>
-          </ul>
-        </div>
-        <div class="searchBox">
+    <section>
+      <div class="navBottom">
+        <div class="filterSearchBox">
           <div class="selectBox">
-            <button
-              class="filterPopBtn searchPopBtn"
-              onclick="optionShow(event,'searchFilter')"
-            >
-              제목+내용
+            <button class="filterPopBtn" onclick="optionShow(event)">
+              전체
             </button>
-            <ul class="searchFilter filterList">
+            <!-- onchange="moodFilter()" -->
+            <ul class="diaryFilter filterList" name="moodFilter">
               <li
                 class="active"
-                onclick="optionSelect(event,'searchFilter')"
-                data-value="제목+내용"
+                onclick="optionSelect(event,'moodFilter')"
+                data-value="전체"
               >
-                제목+내용
+                전체
               </li>
               <li
-                onclick="optionSelect(event,'searchFilter')"
-                data-value="제목"
+                onclick="optionSelect(event,'moodFilter')"
+                data-value="행복해요"
               >
-                제목
+                행복해요
               </li>
               <li
-                onclick="optionSelect(event,'searchFilter')"
-                data-value="내용"
+                onclick="optionSelect(event,'moodFilter')"
+                data-value="슬퍼요"
               >
-                내용
+                슬퍼요
+              </li>
+              <li
+                onclick="optionSelect(event,'moodFilter')"
+                data-value="놀랐어요"
+              >
+                놀랐어요
+              </li>
+              <li
+                onclick="optionSelect(event,'moodFilter')"
+                data-value="화나요"
+              >
+                화나요
               </li>
             </ul>
           </div>
-          <input
-            class="searchInput"
-            type="search"
-            placeholder="검색어를 입력해 주세요."
-            onkeypress="searchFilter(event)"
-          />
+          <div class="searchBox">
+            <div class="selectBox">
+              <button
+                class="filterPopBtn searchPopBtn"
+                onclick="optionShow(event,'searchFilter')"
+              >
+                제목+내용
+              </button>
+              <ul class="searchFilter filterList">
+                <li
+                  class="active"
+                  onclick="optionSelect(event,'searchFilter')"
+                  data-value="제목+내용"
+                >
+                  제목+내용
+                </li>
+                <li
+                  onclick="optionSelect(event,'searchFilter')"
+                  data-value="제목"
+                >
+                  제목
+                </li>
+                <li
+                  onclick="optionSelect(event,'searchFilter')"
+                  data-value="내용"
+                >
+                  내용
+                </li>
+              </ul>
+            </div>
+            <input
+              class="searchInput"
+              type="search"
+              placeholder="검색어를 입력해 주세요."
+              onkeypress="searchFilter(event)"
+            />
+          </div>
         </div>
+        <!-- <button class="diaryWritePopBtn">
+          <img src="./img/plus_outline_light_m.svg" alt="plus" />
+          일기쓰기
+        </button> -->
       </div>
-      <!-- <button class="diaryWritePopBtn">
-        <img src="./img/plus_outline_light_m.svg" alt="plus" />
-        일기쓰기
-      </button> -->
-    </div>
-
-    <section>
       <article class="diaryList">
         <!-- <ul>
           <li>
