스크롤 위치에 관계 없이 플로팅 버튼이 오른쪽 하단에 항상 위치할 수 있도록 배치

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -119,7 +119,7 @@
             </div>
           </div>
         </div>
-        <div class="topScrollBox" onclick="upScroll()">
+        <div onclick="upScroll()">
           <img src="./image/topscroll.png" width="40px" class="topScroll" />
         </div>
         <div class="footer_layout">
