✨ feat: 일기 상세 페이지 데이터 불러오기 추가

--- a/section03/detail.html
+++ b/section03/detail.html
@@ -12,32 +12,21 @@
     <div class="app">
       <header class="header">
         <h1 class="header-title">
-          <a href="">다인의 다이어리</a>
+          <a href="./index.html">다인의 다이어리</a>
         </h1>
       </header>
       <div class="app-inside">
         <section class="container">
           <div class="detail">
-            <div class="detail-title">
-              <h2>타이틀</h2>
-            </div>
+            <div class="detail-title"></div>
             <div class="detail-info flexbox">
               <div class="detail-emotion flexbox">
-                <div class="emotion-thumbnail">
-                  <img src="./assets/images/icon_emoticon_happy.png" alt="" />
-                </div>
-                <div class="badge-emoticon happy">
-                  <span>행복해요</span>
-                </div>
+                <div class="emotion-thumbnail"></div>
+                <div class="badge-emoticon happy"></div>
               </div>
-              <div class="detail-date">
-                <span>2024. 07. 12 작성</span>
-              </div>
+              <div class="detail-date"></div>
             </div>
-            <div class="detail-content">
-              <h3>내용</h3>
-              <p>일기내용</p>
-            </div>
+            <div class="detail-content"></div>
             <div class="actions flexbox">
               <a class="button-edit" href="./edit?number.html">수정</a>
               <button class="button-delete">삭제</button>
